--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
