--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1"
   }
 }
