--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "react/jsx-filename-extension": ["off"],
     "react/prop-types": ["off"],
     "react/react-in-jsx-scope": ["off"],
+    "react/jsx-props-no-spreading": ["off"],
     "react/destructuring-assignment": ["off"],
     "no-return-assign": ["off"],
     "no-param-reassign": ["off"]
