--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.2",
     "node-sass": "^4.13.1",
+    "purecss": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
