--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
-    "swr": "^0.1.18",
-    "typed.js": "^2.0.11"
+    "swr": "^0.1.18"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
