--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
+    "react-scrollmagic": "^2.2.0",
     "swr": "^0.1.18"
   },
   "devDependencies": {
