:sparkles: Add mobile friendly menu

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,8 @@
     "react/jsx-props-no-spreading": ["off"],
     "react/destructuring-assignment": ["off"],
     "jsx-a11y/anchor-is-valid": ["off"],
+    "jsx-a11y/click-events-have-key-events": ["off"],
+    "jsx-a11y/interactive-supports-focus": ["off"],
     "no-return-assign": ["off"],
     "no-param-reassign": ["off"]
   }
