--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.8.1",
-    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1",
-    "react-scrollmagic": "^2.2.0",
-    "swr": "^0.1.18"
+    "react-scrollmagic": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
