:wrench: Add home page configuration files

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,19 +4,15 @@ backend:
 media_folder: public/img
 public_folder: img
 collections:
-  - name: 'pages'
-    label: 'Pages'
+  - label: "Pages"
+    name: "pages"
     files:
-      - label: 'Home'
-        name: 'home'
-        file: 'content/home.md'
+      - label: "Home"
+        name: "home"
+        file: "site/pages/home.md"
         fields:
-          - { label: 'Title', name: 'title', widget: 'string' }
-          - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-          - { label: 'Body', name: 'body', widget: 'markdown' }
-          - label: 'Cats'
-            name: 'cats'
+          - label: Suffixes
+            name: suggix
             widget: list
             fields:
-              - { label: 'Name', name: 'name', widget: 'string' }
-              - { label: 'Description', name: 'description', widget: 'text' }
+              - {label: Suffix, name: suffix, widget: string}
