--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bulma": "^0.8.1",
     "next": "^9.3.2",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scrollmagic": "^2.2.0"
