--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icomoon": "^2.0.3",
     "react-scrollmagic": "^2.2.0"
   },
   "devDependencies": {
