--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^6.0.0",
     "frontmatter-markdown-loader": "^3.3.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.10",
     "prettier": "^2.0.2",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "url-loader": "^4.1.0"
   },
   "husky": {
     "hooks": {
