:sparkles: Update about page content

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -40,6 +40,9 @@ collections:
           - label: Profile Image
             name: profileImage
             widget: image
+          - label: Profile Alt
+            name: profileAlt
+            widget: text
           - label: Links
             name: links
             widget: list
