--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -56,3 +56,12 @@ collections:
           - label: Title
             name: title
             widget: string
+  - label: "Blog"
+    name: "blog"
+    folder: "site/blog"
+    create: true
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Body", name: "body", widget: "markdown"}
