:wrench: Configure blog post

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -59,9 +59,11 @@ collections:
   - label: "Blog"
     name: "blog"
     folder: "site/blog"
+    folder: 'assets/content/blog'
     create: true
     fields:
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
