--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.8.1",
+    "markdown-to-jsx": "^6.11.1",
+    "moment": "^2.24.0",
     "next": "^9.3.2",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
