--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "baseUrl": "https://maferland.netlify.app",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
     "export": "npm run build && next export",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
-    "fix": "eslint --fix --ext .js --ignore-path .gitignore ."
+    "fix": "eslint --fix --ext .js --ignore-path .gitignore .",
+    "shorten": "netlify-shortener"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +39,7 @@
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.10",
+    "netlify-shortener": "^2.1.1",
     "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
     "url-loader": "^4.1.0"
