--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "baseUrl": "https://maferland.netlify.app",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && cp _redirects public",
     "start": "next start",
     "export": "npm run build && next export",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
