:construction_worker: Fix yarn export

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "next",
     "build": "next build && cp _redirects public",
     "start": "next start",
-    "export": "npm run build && next export",
+    "export": "yarn run build && next export",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "fix": "eslint --fix --ext .js --ignore-path .gitignore .",
     "shorten": "netlify-shortener"
