--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -34,6 +34,9 @@ collections:
           - label: Title
             name: title
             widget: string
+          - label: Subtitle
+            name: subtitle
+            widget: string
           - label: Description
             name: description
             widget: text
