:sparkles: Profile image cartoon animation

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -43,6 +43,9 @@ collections:
           - label: Profile Image
             name: profileImage
             widget: image
+          - label: Under Profile Image
+            name: underProfileImage
+            widget: image
           - label: Profile Alt
             name: profileAlt
             widget: text
