--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "baseUrl": "https://maferland.netlify.app",
   "scripts": {
     "dev": "next",
-    "build": "next build && cp _redirects public",
+    "build": "next build",
     "start": "next start",
     "export": "yarn run build && next export",
+    "postexport": "node scripts/postexport.js",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "fix": "eslint --fix --ext .js --ignore-path .gitignore .",
     "shorten": "netlify-shortener",
@@ -21,6 +22,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.8.1",
+    "fs-extra": "^9.0.0",
     "markdown-to-jsx": "^6.11.1",
     "moment": "^2.24.0",
     "next": "^9.4.0",
