--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "fix": "eslint --fix --ext .js --ignore-path .gitignore .",
     "shorten": "netlify-shortener",
-    "deploy": "yarn export && netlify deploy"
+    "deploy": "yarn export && netlify deploy",
+    "analyze": "ANALYZE=true yarn build"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next/bundle-analyzer": "^9.5.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.8.1",
@@ -31,7 +33,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scrollmagic": "^2.2.0"
+    "react-scrollmagic": "^2.2.0",
+    "webpack": "^4.44.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
