:recycle: Use @maferland/hooks for setInterval

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@maferland/hooks": "^0.1.0",
     "@next/bundle-analyzer": "^9.5.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
