Update Blog “publishing-a-hooks-library-with-minimal-config”

--- a/site/blog/publishing-a-hooks-library-with-minimal-config.json
+++ b/site/blog/publishing-a-hooks-library-with-minimal-config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Publishing a hooks library with minimal config",
+  "title": "Publishing a react library with minimal config",
   "slug": "publishing-library-minimal-config",
   "date": "2020-09-30T01:40:24.234Z",
   "image": {
