--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@maferland/hooks": "^0.1.0",
     "@next/bundle-analyzer": "^9.5.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.8.1",
+    "facepaint": "^1.2.1",
     "fs-extra": "^9.0.0",
     "markdown-to-jsx": "^6.11.1",
     "moment": "^2.24.0",
