--- a/site/content/projects.json
+++ b/site/content/projects.json
@@ -1,4 +1,5 @@
 {
   "title": "Projects",
-  "description": "What I'm working on lately"
+  "description": "What I'm working on lately",
+  "cta": "SHOW ME"
 }
