:sparkles: Display github activity

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.35",
+    "@maferland/github-activity": "^0.2.4",
     "@maferland/hooks": "^0.1.0",
     "@next/bundle-analyzer": "^9.5.2",
     "@zeit/next-css": "^1.0.1",
