--- a/site/content/projects.json
+++ b/site/content/projects.json
@@ -1,5 +1,7 @@
 {
   "title": "Projects",
   "description": "What I'm working on lately",
-  "cta": "SHOW ME"
+  "cta": "SHOW ME",
+  "github": "Github Activity",
+  "spotify": "Currently listening"
 }
