--- a/site/content/projects.json
+++ b/site/content/projects.json
@@ -3,5 +3,5 @@
   "description": "What I'm working on lately",
   "cta": "SHOW ME",
   "github": "Github Activity",
-  "spotify": "Currently listening"
+  "npm": "Recently published"
 }
