--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "fs-extra": "^9.0.0",
     "markdown-to-jsx": "^6.11.1",
     "moment": "^2.24.0",
+    "netlify-cms": "^2.10.93",
+    "netlify-cms-widget-mdx": "^0.4.4",
     "next": "^10.0.1",
     "node-sass": "^4.13.1",
     "prismjs": "^1.20.0",
