--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -133,6 +133,15 @@ collections:
           - { label: Alt, name: alt, widget: string }
       - { label: 'Description', name: 'description', widget: 'text' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+  - label: 'Blog2'
+    name: 'blog2'
+    folder: 'site/blog2'
+    extension: 'mdx',
+    format: 'frontmatter',
+    fields:
+      - name: body
+        label: Body
+        widget: mdx
   - label: 'Projects'
     name: 'projects'
     folder: 'site/projects'
