chore: remove mdx widget

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.12.17",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.35",
     "@maferland/github-activity": "^0.2.4",
@@ -33,11 +34,8 @@
     "fs-extra": "^9.0.0",
     "markdown-to-jsx": "^6.11.1",
     "moment": "^2.24.0",
-    "netlify-cms": "^2.10.93",
-    "netlify-cms-widget-mdx": "^0.4.4",
-    "next": "^10.0.1",
-    "node-sass": "^4.13.1",
-    "prismjs": "^1.20.0",
+    "next": "^10.0.7",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
