--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -118,6 +118,7 @@ collections:
   - label: 'Blog'
     name: 'blog'
     folder: 'site/blog'
+    sortable_fields: ['date', 'title']
     extension: json
     format: json
     create: true
