--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@emotion/core": "^10.0.35",
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/react": "^11.1.5",
     "@maferland/github-activity": "^0.2.4",
     "@maferland/hooks": "^0.1.0",
     "@maferland/spotify-react": "^0.3.0",
@@ -31,7 +31,7 @@
     "bulma": "^0.8.1",
     "facepaint": "^1.2.1",
     "fs-extra": "^9.0.0",
-    "markdown-to-jsx": "^6.11.1",
+    "markdown-to-jsx": "^7.1.1",
     "next": "^10.0.1",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
@@ -44,7 +44,6 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
