--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
   "private": true,
-  "name": "remix-app-template",
-  "description": "",
-  "license": "",
+  "description": "Remix+Tailwind Starter",
+  "license": "MIT",
+  "author": "Marc-Antoine Ferland <me@maferland.com>",
   "dependencies": {
     "@remix-run/react": "^1.2.1",
     "@remix-run/vercel": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.2.1"
+    "remix": "^1.1.3"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^16.2.1",
     "@remix-run/dev": "^1.2.1",
     "@remix-run/serve": "^1.2.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "commitlint": "^16.2.1",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
+    "doctoc": "^2.1.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
+    "msw": "^0.36.8",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.1.2"
   },
@@ -28,6 +43,22 @@
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css --minify",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css --watch"
+    "dev:css": "tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css --watch",
+    "postinstall": "remix setup node",
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint:staged": "eslint --fix",
+    "format": "prettier --write \"**/*.+(ts|jsx|tsx|json|md|yml)\"",
+    "format:staged": "prettier --write",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged --allow-empty"
+  },
+  "lint-staged": {
+    "*.(ts|tsx|json|md|yml)": "yarn format:staged",
+    "services/app/**/*.(ts|tsx)": "yarn lint:staged",
+    ".md": "doctoc"
+  },
+  "volta": {
+    "node": "16.14.0",
+    "yarn": "1.22.17"
   }
 }
