--- a/package.json
+++ b/package.json
@@ -4,35 +4,31 @@
   "license": "MIT",
   "author": "Marc-Antoine Ferland <me@maferland.com>",
   "dependencies": {
-    "@remix-run/react": "^1.2.1",
-    "@remix-run/vercel": "^1.2.1",
+    "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
+    "@remix-run/vercel": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.2.1"
+    "remix": "^1.1.3"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^16.2.1",
-    "@remix-run/dev": "^1.2.1",
-    "@remix-run/serve": "^1.2.1",
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "commitlint": "^16.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "concurrently": "^7.0.0",
-    "cross-env": "^7.0.3",
     "doctoc": "^2.1.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
-    "msw": "^0.36.8",
+    "lint-staged": "^12.3.3",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.19",
     "typescript": "^4.1.2"
   },
   "engines": {
