--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "author": "Marc-Antoine Ferland <me@maferland.com>",
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
