--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
+    "marked": "^4.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-use": "^17.3.2",
     "remix": "^1.1.3"
   },
@@ -17,6 +19,7 @@
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@remix-run/dev": "^1.1.3",
+    "@types/marked": "^4.0.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
